minified css/js

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- main css -->
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.min.css">
     <!-- responsive css -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+    <link rel="stylesheet" href="css/responsive.min.css">
 </head>
 
 <body data-bs-spy="scroll">
@@ -562,7 +564,8 @@
     <!-- bootstrap js -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <!-- main js -->
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
+    <script src="js/script.min.js"></script>
 </body>
 
 </html>
